Cambio para layout de seleccion de tipo de usuario

--- a/app/src/main/res/layout/activity_choose__user.xml
+++ b/app/src/main/res/layout/activity_choose__user.xml
@@ -11,13 +11,15 @@
         android:id="@+id/guardian_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoGuard"
         android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.927"
+        app:layout_constraintStart_toEndOf="@+id/user_bttn"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/guardian_bttn" />
 
@@ -27,7 +29,7 @@
         android:layout_height="112dp"
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoUser"
         android:onClick="onClick"
@@ -41,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:text="@string/txtTituloChooseUser"
@@ -59,7 +61,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
         android:layout_marginLeft="68dp"
-        android:layout_marginTop="8dp"
         android:text="@string/txtChooseUser"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
@@ -70,9 +71,8 @@
         android:id="@+id/guardian_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginRight="76dp"
         android:text="@string/txtChooseGuardia"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
@@ -83,9 +83,9 @@
         android:id="@+id/admin_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginLeft="124dp"
+        android:layout_marginTop="196dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoAdmin"
         android:onClick="onClick"
@@ -97,9 +97,8 @@
         android:id="@+id/admin_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="102dp"
+        android:layout_marginLeft="102dp"
         android:text="@string/txtChooseAdmin"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
