--- a/app/src/main/res/layout/activity_choose__registro.xml
+++ b/app/src/main/res/layout/activity_choose__registro.xml
@@ -11,13 +11,17 @@
         android:id="@+id/guardian_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoGuard"
         android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.973"
+        app:layout_constraintStart_toEndOf="@+id/user_bttn"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/guardian_bttn" />
 
@@ -27,7 +31,7 @@
         android:layout_height="112dp"
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoUser"
         android:onClick="onClick"
@@ -41,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:text="Registrarse como:"
@@ -49,7 +53,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,21 +75,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
         android:text="@string/txtChooseGuardia"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/usuario_txt"
         app:layout_constraintTop_toBottomOf="@+id/guardian_bttn" />
 
     <ImageButton
         android:id="@+id/admin_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginLeft="116dp"
+        android:layout_marginTop="208dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoAdmin"
         android:onClick="onClick"
@@ -97,9 +103,8 @@
         android:id="@+id/admin_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginLeft="96dp"
         android:text="@string/txtChooseAdmin"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
