--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -653,7 +653,7 @@
         <item>@color/md_disabled_hint_text_white</item>
         <item>@color/md_divider_white</item>
     </array>
-    <color name="md_text_white">#ffffffff</color>
+    <color name="md_text_white">#FFFFFF</color>
     <color name="md_text_white_87">#dfffffff</color>
     <color name="md_secondary_text_icons_white">#b3ffffff</color>
     <color name="md_disabled_hint_text_white">#4dffffff</color>
