--- a/app/src/main/res/layout/activity_choose__user.xml
+++ b/app/src/main/res/layout/activity_choose__user.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_denuncia"
-    tools:context=".Choose_User">
+    android:background="@drawable/sesion_bg"
+    >
 
     <ImageButton
         android:id="@+id/guardian_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoGuard"
         android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.927"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/user_bttn"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/guardian_bttn" />
@@ -29,7 +29,7 @@
         android:layout_height="112dp"
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="88dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoUser"
         android:onClick="onClick"
@@ -41,13 +41,14 @@
         android:id="@+id/user_c"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="120dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="136dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
+        android:gravity="center"
         android:text="@string/txtTituloChooseUser"
-        android:textColor="#14D152"
+        android:textColor="#FFFF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,8 +72,8 @@
         android:id="@+id/guardian_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="76dp"
-        android:layout_marginRight="76dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginRight="72dp"
         android:text="@string/txtChooseGuardia"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
@@ -83,12 +84,12 @@
         android:id="@+id/admin_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginStart="124dp"
-        android:layout_marginLeft="124dp"
-        android:layout_marginTop="196dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="284dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoAdmin"
         android:onClick="onClick"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/admin_bttn" />
@@ -97,11 +98,12 @@
         android:id="@+id/admin_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="102dp"
-        android:layout_marginLeft="102dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginLeft="156dp"
         android:text="@string/txtChooseAdmin"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/admin_bttn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/admin_bttn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
