--- a/app/src/main/res/layout/activity_choose__registro.xml
+++ b/app/src/main/res/layout/activity_choose__registro.xml
@@ -4,23 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_denuncia"
-    tools:context=".Choose_User">
+    android:background="@drawable/sesion_bg"
+    >
 
     <ImageButton
         android:id="@+id/guardian_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoGuard"
         android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.973"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/user_bttn"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/guardian_bttn" />
@@ -29,9 +27,9 @@
         android:id="@+id/user_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="92dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoUser"
         android:onClick="onClick"
@@ -45,15 +43,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="104dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:text="Registrarse como:"
-        android:textColor="#14D152"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:textColor="#FFFF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.467"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,9 +61,9 @@
         android:id="@+id/usuario_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="32dp"
         android:text="@string/txtChooseUser"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
@@ -74,7 +74,7 @@
         android:id="@+id/guardian_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
         android:text="@string/txtChooseGuardia"
@@ -89,25 +89,30 @@
         android:id="@+id/admin_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginLeft="116dp"
-        android:layout_marginTop="208dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoAdmin"
         android:onClick="onClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_c"
+        app:layout_constraintTop_toBottomOf="@+id/user_bttn"
+        app:layout_constraintVertical_bias="0.42000002"
         app:srcCompat="@drawable/admin_bttn" />
 
     <TextView
         android:id="@+id/admin_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginLeft="96dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginLeft="148dp"
+        android:layout_marginTop="32dp"
         android:text="@string/txtChooseAdmin"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/admin_bttn"
+        app:layout_constraintHorizontal_bias="0.431"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/admin_bttn" />
+        app:layout_constraintTop_toBottomOf="@+id/admin_bttn"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
