--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_delitos_bg"
     tools:context=".HomeFragment">
 
     <RelativeLayout
@@ -13,14 +14,22 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="30sp"
-            android:layout_centerInParent="true"
-            android:gravity="center"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="56dp"
+            android:layout_marginLeft="56dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginRight="55dp"
             android:fontFamily="sans-serif-medium"
-            android:textStyle="bold"
-            android:textColor="@color/md_blue_grey_500_75"
-            android:text="@string/txtSeccionDenuncias" />
+            android:gravity="center"
+            android:text="@string/txtSeccionDenuncias"
+            android:textAlignment="center"
+            android:textColor="@color/md_white_1000"
+            android:textSize="36sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
@@ -28,14 +37,16 @@
         android:layout_width="match_parent"
         android:layout_height="448dp"
         android:layout_below="@+id/frgSeccionDelitos"
-        android:layout_marginTop="-2dp">         
-        
+        android:layout_marginTop="52dp">
+
         <LinearLayout
             android:id="@+id/seccion1"
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:layout_marginTop="10dp"
+            android:gravity="center"
             android:orientation="horizontal">
+
 
             <LinearLayout
                 android:layout_width="180dp"
@@ -48,9 +59,9 @@
                     android:layout_height="150dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
+                    android:background="@color/md_white_1000_50"
                     android:drawableTop="@drawable/robo_btn"
-                    android:background="@color/md_white_1000"
-                    android:text="@string/txtBtnRobo"/>
+                    android:text="@string/txtBtnRobo" />
 
             </LinearLayout>
 
@@ -65,22 +76,23 @@
                     android:layout_height="150dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
+                    android:background="@color/md_white_1000_50"
                     android:drawableTop="@drawable/agresion"
-                    android:background="@color/md_white_1000"
-                    android:text="@string/txtBtnAgresion"/>
+                    android:text="@string/txtBtnAgresion" />
 
 
             </LinearLayout>
-            
+
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/seccion2"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:layout_below="@+id/seccion1">
+            android:layout_below="@+id/seccion1"
+            android:layout_marginTop="82dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="180dp"
@@ -93,8 +105,8 @@
                     android:layout_height="150dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
+                    android:background="@color/md_white_1000_50"
                     android:drawableTop="@drawable/droga_bttn"
-                    android:background="@color/md_white_1000"
                     android:text="@string/txtBtnDrogas" />
 
             </LinearLayout>
@@ -110,17 +122,16 @@
                     android:layout_height="150dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
+                    android:background="@color/md_white_1000_50"
                     android:drawableTop="@drawable/crimen_bttn1"
-                    android:background="@color/md_white_1000"
                     android:text="Otros" />
 
             </LinearLayout>
-            
-            
+
+
         </LinearLayout>
 
     </RelativeLayout>
-
 
 
 </RelativeLayout>
