--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sesion_bg"
     tools:context=".PerfilFragment">
 
     <RelativeLayout
         android:id="@+id/fondoImgPerfil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/md_blue_grey_500_75"
+        android:background="@color/md_green_500_50"
         android:paddingBottom="5dp">
 
         <RelativeLayout
@@ -68,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtPerfilNombre"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="12sp" />
 
                 <TextView
@@ -77,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="mi nombre"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="16sp" />
 
                 <View
@@ -99,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtPerfilApellidos"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="12sp" />
 
                 <TextView
@@ -108,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="mis apellidos"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="16sp" />
 
                 <View
@@ -130,7 +131,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtPerfilEmail"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="12sp" />
 
                 <TextView
@@ -139,7 +140,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="mi email"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="16sp" />
 
                 <View
@@ -161,7 +162,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtPerfilTelefono"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="12sp" />
 
                 <TextView
@@ -170,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="mi telefono"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="16sp" />
 
                 <View
@@ -192,7 +193,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtPerfilCuenta"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="12sp" />
 
                 <TextView
@@ -201,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="mi tipo de cuenta"
-                    android:textColor="@color/md_blue_grey_500_75"
+                    android:textColor="@color/md_white_1000"/>
                     android:textSize="16sp" />
 
                 <View
