--- a/app/src/main/res/layout/activity_choose__user.xml
+++ b/app/src/main/res/layout/activity_choose__user.xml
@@ -11,9 +11,11 @@
         android:id="@+id/guardian_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoGuard"
         android:onClick="onClick"
@@ -27,9 +29,9 @@
         android:id="@+id/user_bttn"
         android:layout_width="108dp"
         android:layout_height="112dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoUser"
         android:onClick="onClick"
@@ -43,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:gravity="center"
@@ -60,8 +62,9 @@
         android:id="@+id/usuario_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginTop="18dp"
         android:text="@string/txtChooseUser"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
@@ -72,8 +75,9 @@
         android:id="@+id/guardian_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="72dp"
-        android:layout_marginRight="72dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
         android:text="@string/txtChooseGuardia"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
@@ -85,11 +89,12 @@
         android:layout_width="108dp"
         android:layout_height="112dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="284dp"
+        android:layout_marginTop="220dp"
         android:background="@drawable/circle_bttn"
         android:contentDescription="@string/imgFondoAdmin"
         android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/admin_bttn" />
@@ -98,8 +103,9 @@
         android:id="@+id/admin_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginLeft="156dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="18dp"
         android:text="@string/txtChooseAdmin"
         android:textColor="@color/md_white_1000"
         android:textSize="24sp"
