--- a/app/src/main/res/layout/activity_reportar__denuncia.xml
+++ b/app/src/main/res/layout/activity_reportar__denuncia.xml
@@ -28,7 +28,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:background="@color/md_white_1000_50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/area" />
@@ -39,10 +39,10 @@
         android:layout_height="35dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:text="@string/txtReportarDesc"
-        android:textSize="18sp"
         android:textColor="@color/md_white_1000"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -50,7 +50,10 @@
         android:id="@+id/edit_descrip"
         android:layout_width="341dp"
         android:layout_height="269dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
         android:background="@color/md_white_1000_50"
         android:ems="10"
         android:gravity="center"
@@ -66,7 +69,7 @@
         android:id="@+id/denunciar_bttn"
         android:layout_width="148dp"
         android:layout_height="69dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/button"
         android:onClick="Denunciar"
         android:text="@string/btnDenunciar"
@@ -94,6 +97,8 @@
         android:id="@+id/denunciante_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
         android:textColor="@color/md_white_1000"
